// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components Image should render image with custom styles 1`] = `
.c0 {
  margin-right: 0;
  margin-bottom: 1em;
  margin-left: 1em;
  width: 200px;
  float: right;
  height: auto;
}

<img
  className="c0"
  width={200}
/>
`;

exports[`Components Image should render image with default styles 1`] = `
.c0 {
  margin-right: 0;
  margin-bottom: 1em;
  margin-left: 1em;
  width: 315px;
  float: none;
  height: auto;
}

<img
  className="c0"
  src="https://image.tmdb.org/t/p/w500/image.jpg"
/>
`;
